--- a/client/keyboard.css
+++ b/client/keyboard.css
@@ -2,6 +2,7 @@
 font: 71%/1.5 Verdana, Sans-Serif;
 /*background: #eee;*/
 margin: 100px auto;
+margin-top: 20px;
 width: 688px;
 }
 #write {
@@ -9,7 +10,7 @@ margin: 0 0 5px;
 padding: 5px;
 width: 671px;
 height: 200px;
-font: 1em/1.5 Verdana, Sans-Serif;
+font: 1.5em/1.5 Verdana, Sans-Serif;
 background: #fff;
 border: 1px solid #f9f9f9;
 -moz-border-radius: 5px;
